--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "node-telegram-bot-api": "^0.63.0"
+    "node-telegram-bot-api": "^0.63.0",
+    "web3": "^4.5.0"
   }
 }
