--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.63.0",
+    "starknet": "^5.24.3",
     "web3": "^4.5.0"
   }
 }
