--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ethers": "^6.11.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
