--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ethers": "^6.11.1",
     "express": "~4.16.1",
+    "jalali-moment": "^3.3.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.63.0",
